create four columns in the second row and centre align the text in each column

--- a/AK/AK.html
+++ b/AK/AK.html
@@ -29,9 +29,10 @@
 
   <div class="row">
 
-  <div class="col-md-3" id="happy" >
+  <div class="col-sm-3" id="happy" >
 
   <div class="row" id="happyhour">
+
   <p>Happy Hour</p>
   </div>
 
@@ -41,23 +42,27 @@
 
   </div>
 
-  <div class="col-md-3" id="breakfast" >
+  <div class="col-sm-3" id="breakfast" >
   <p>Breakfast</p>
   </div>
 
-  <div class="col-md-3" id="lunch" >
+  <div class="col-sm-3" id="lunch" >
   <p>Lunch</p>
   </div>
 
-  <div class="col-md-3" id="dinner" >
+  <div class="col-sm-3" id="dinner" >
   <p>Dinner</p>
   </div>
 
   </div>
+
+  <div class="row"></div>
 
 
   </div>
 
 
   </body>
+
+
   </html>
