turn the four rows into columns and centre align the paragraphs in each

--- a/AK/AK.html
+++ b/AK/AK.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+  <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta name="description" content="PORTFOLIO">
-   <meta name="keywords" content="HTML,CSS">
-   <meta name="author" content="OWINO BEN OGWANG">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="CSS/bootstrap.css">
+
+  <meta charset="utf-8">
+  <meta name="description" content="PORTFOLIO">
+  <meta name="keywords" content="HTML,CSS">
+  <meta name="author" content="OWINO BEN OGWANG">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="CSS/bootstrap.css">
   <link rel="stylesheet" href="CSS/STYLES.css">
   <script src="CSS/jquery.min.js"></script>
   <script src="CSS/bootstrap.min.js"></script>
@@ -56,7 +58,13 @@
 
   </div>
 
-  <div class="row"></div>
+  <div class="row" id="fastfood">
+  <div class="col-sm-6" id="cakes" >
+  <img src="../fastFood1.jpg" alt="cakecream">
+  <img src="../fastFood2.jpg" alt="cake">
+  </div>
+
+  <div class="col-sm-6" id="texts" ></div>
 
 
   </div>
